--- a/static/styles.css
+++ b/static/styles.css
@@ -68,8 +68,9 @@ header.scrolled .nav-links a {
 .hamburger {
     display: none;
     cursor: pointer;
-    font-size: 24px;
+    font-size: 36px;
     color: #fff;
+    z-index: 10;
 }
 
 header.scrolled .hamburger {
@@ -381,7 +382,7 @@ footer {
         right: -100%;
         height: 100vh;
         width: 250px;
-        background: #fff;
+        background: rgba(255, 255, 255, 0.8);
         flex-direction: column;
         padding-top: 80px;
         transition: right 0.3s ease;
@@ -390,6 +391,12 @@ footer {
     
     .nav-links.active {
         right: 0;
+    }
+
+    .nav-links.active ~ .hamburger {
+        color: rgba(51, 51, 51, 0.5);
+        text-shadow: 2px 2px 8px #ccc;
+        
     }
     
     .nav-links li {
